objects/MMPJ_TOPG_PRISMADataEffect__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Brand__c</fullName>
        <externalId>true</externalId>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Indicator__c</fullName>
        <label>Indicator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Market__c</fullName>
        <externalId>true</externalId>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prisma Data - EFFECT</label>
    <nameField>
        <displayFormat>PEf-{00000}</displayFormat>
        <label>Prisma Data - EFFECT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prisma Data - EFFECT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>